Fixed IE6 layout issue

--- a/docs/static/modipyd.css
+++ b/docs/static/modipyd.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 /**
  * sphinx theme: Modipyd 
  *
@@ -10,7 +9,6 @@
  * Modipyd: http://www.metareal.org/p/modipyd/index.html
  *
  */
-
 
 html * {
   font-size: 16px;
@@ -58,19 +56,6 @@ div.footer {
   text-align: left;
 }
 
-/*
-div.document,
-div.body,
-div.sphinxsidebar {
-  border: 1px solid red;
-}
-div.documentwrapper,
-div.bodywrapper,
-div.sphinxsidebarwrapper {
-  border: 1px solid green;
-}
-*/
-
 div.document {
   background-color: #ddd;
 }
@@ -94,6 +79,24 @@ div.sphinxsidebar {
 }
 div.sphinxsidebarwrapper {
   padding: 10px 5px 0 10px;
+}
+
+
+/* ----------------------------------------------------------------
+ * Windows IE6 Layout
+ * ---------------------------------------------------------------- */ 
+* html div.related,
+* html div.document,
+* html div.footer {
+  width: 90%;
+}
+* html div.bodywrapper {
+  width: 75%;
+  margin-right: 0;
+}
+* html div.sphinxsidebar {
+  width: 25%;
+  margin-left: 0;
 }
 
 
@@ -235,17 +238,6 @@ div.body p {
   line-height: 1.3;
 }
 
-/*
-div.body ul {
-  display: block;
-  margin: 1em 0;
-  list-style-type: disc;
-}
-div.body li {
-  display: list-item;
-  margin-left: 3em;
-}
-*/
 div.body ul {
   display: block;
   margin: 1em 0;
